--- a/main.html
+++ b/main.html
@@ -3,100 +3,69 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Q & A</title>
+    <title>Sidebar</title>
     <!-- font-awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
-    <!-- extra fonts -->
     <link
-      href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap"
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
+
     <!-- styles -->
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-      <section class="questions">
-        <!-- title -->
-        <div class="title">
-          <h2>general questions</h2>
-        </div>
-        <!-- questions -->
-        <div class="section-center">
-          <!-- single question -->
-          <article class="question">
-            <!-- question title -->
-            <div class="question-title">
-              <p>do you accept all major credit cards?</p>
-              <button type="button" class="question-btn">
-                <span class="plus-icon">
-                  <i class="far fa-plus-square"></i>
-                </span>
-                <span class="minus-icon">
-                  <i class="far fa-minus-square"></i>
-                </span>
-              </button>
-            </div>
-            <!-- question text -->
-            <div class="question-text">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
-                dolore illo dolores quia nemo doloribus quaerat, magni numquam
-                repellat reprehenderit.
-              </p>
-            </div>
-          </article>
-          <!-- end of single question -->
-          <!-- single question -->
-          <article class="question">
-            <!-- question title -->
-            <div class="question-title">
-              <p>do you suppport local farmers?</p>
-              <button type="button" class="question-btn">
-                <span class="plus-icon">
-                  <i class="far fa-plus-square"></i>
-                </span>
-                <span class="minus-icon">
-                  <i class="far fa-minus-square"></i>
-                </span>
-              </button>
-            </div>
-            <!-- question text -->
-            <div class="question-text">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
-                dolore illo dolores quia nemo doloribus quaerat, magni numquam
-                repellat reprehenderit.
-              </p>
-            </div>
-          </article>
-          <!-- end of single question -->
-          <!-- single question -->
-          <article class="question">
-            <!-- question title -->
-            <div class="question-title">
-              <p>do you use organic ingredients?</p>
-              <!-- button -->
-              <button type="button" class="question-btn">
-                <span class="plus-icon">
-                  <i class="far fa-plus-square"></i>
-                </span>
-                <span class="minus-icon">
-                  <i class="far fa-minus-square"></i>
-                </span>
-              </button>
-            </div>
-            <!-- question text -->
-            <div class="question-text">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
-                dolore illo dolores quia nemo doloribus quaerat, magni numquam
-                repellat reprehenderit.
-              </p>
-            </div>
-          </article>
-          <!-- end of single question -->
-      </section>
-    </main>
+    <button class="sidebar-toggle">
+      <i class="fas fa-bars"></i>
+    </button>
+    <aside class="sidebar">
+      <div class="sidebar-header">
+        <img src="logo.svg" class="logo" alt="" />
+        <button class="close-btn"><i class="fas fa-times"></i></button>
+      </div>
+      <!-- links -->
+      <ul class="links">
+        <li>
+          <a href="index.html">home</a>
+        </li>
+        <li>
+          <a href="about.html">about</a>
+        </li>
+        <li>
+          <a href="projects.html">projects</a>
+        </li>
+        <li>
+          <a href="contact.html">contact</a>
+        </li>
+      </ul>
+      <!-- social media -->
+      <ul class="social-icons">
+        <li>
+          <a href="https://www.twitter.com">
+            <i class="fab fa-facebook"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.twitter.com">
+            <i class="fab fa-twitter"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.twitter.com">
+            <i class="fab fa-behance"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.twitter.com">
+            <i class="fab fa-linkedin"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.twitter.com">
+            <i class="fab fa-sketch"></i>
+          </a>
+        </li>
+      </ul>
+    </aside>
     <!-- javascript -->
     <script src="main.js"></script>
   </body>
